style.css
/* ... */
/* main menu */
ul.w-nav-list.level_1.hover_simple li a {
    padding-left: 0 !important;
}

ul.w-nav-list.level_1.hover_simple li:nth-child(4) a {
    padding-right: 0 !important;
}
.l-subheader-cell .w-nav-list.level_2 {
    padding: 0 15px;
}
.l-subheader-sticky-mobile .w-nav-list.level_2 {
    background-color: var(--color-primary)!important;
    color: white;
}
.l-subheader-sticky-mobile .w-nav-list.level_2 a:hover,.l-subheader-sticky-mobile .w-nav-list.level_2 a:visited,.l-subheader-sticky-mobile .w-nav-list.level_2 a:focus{
    color: white;
}
.cy-menu-search-icon {

}

/* CSS homepage Cyclando */
body {
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
}
/* CSS homepage banner intro  */
.Home-intro-banner {
    display: grid;
    grid-template-rows: 1fr;
    justify-items: center;
    align-items: center;
}

body.home .Home-intro-banner .home-banner-content {
    padding: 5rem 0 0rem;
}


.Home-intro-banner .l-section-h.i-cf {
    padding: 15rem 0 4rem;
}

body.home .Home-intro-banner .home-banner-content h2:first-child {
    font-weight: 600;
    font-size: 49px;
    margin: 0;
}

body.home .Home-intro-banner .home-banner-content h2:last-child {
    font-size: 60px;
    padding: 0;
    font-weight: bold;
}

.home-banner-content-p p {
    font-size: 18px;
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.71);
}

.home-banner-content-p {
    margin-bottom: 100px;
}

.home-banner-content-h h2 {
    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.71);
}

@media screen and (min-width: 1137px) and (max-width: 1350px) {
    body .webmapp-anypost-template-cy_route .webmapp_post_meta .prezzo-tab p {
        font-size: 26px;
    }

    body .w-person-name {
        font-size: 22px;
    }
    .l-subheader-cell.at_center {
        justify-content: center;
        display: none;
    }
}

@media screen and (min-width: 993px) and (max-width: 1305px) { 
    .webmapp_post_meta .new-price {
        float: left;
    }
    .webmapp_post_meta .old-price {
        float: left;
        font-size: 19px;
    }
}
@media screen and (min-width: 991px) and (max-width: 1136px) {
    body .webmapp-anypost-template-cy_route .webmapp_post_meta .prezzo-tab p {
        font-size: 22px;
    }

    body .webmapp-anypost-template-cy_route .webmapp_post_meta .post_meta_info {
        min-height: 85px;
    }
    .l-subheader-cell.at_center {
        justify-content: center;
        display: none;
    }
}
@media screen and (max-width: 1200px) {
    .advancedsearch-container .facetwp-template {
        grid-template-columns: 1fr!important;
    }
}

@media screen and (max-width: 990px) {
    body div#ccchildpages-1 {
        grid-template-columns: 1fr;
    }
}

@media screen and (max-width: 900px) {
    #page-content .Home-intro-banner {
        min-height: 75vh;
    }
    .cy-modal-content {
        width: 100%;
    }

    #cy-search-lente {
        display: none;
    }
    .cerca-grid-container {
        grid-template-rows: 1fr;
        grid-template-areas:
            "search"
            "result";
        display: grid;
    }
    .cerca-grid-container .result{
        grid-area: result;
    }
    .cerca-grid-container .search{
        grid-area: search;
    }
    .cerca-result-container .facetwp-template {
        grid-template-columns: 1fr!important;
    }
    #page-footer {
        padding-bottom: 60px;
    }
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone a,.l-subheader-sticky-mobile .menu-item.level_1.current-menu-item>.w-nav-anchor {
        color: white;
    }
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone a:hover {
        color: white;
    }
    .l-subheader-sticky-mobile .l-subheader-cell.at_left .w-nav-icon {
        color: white;
    }
    .l-subheader-sticky-mobile .l-subheader-cell.at_left a:hover {
        color: white;
    }
    .sticky-mobile-menu-phone .l-subheader-cell.at_left .w-nav-icon {
        color: white;
    }
    .sticky-mobile-menu-phone .l-subheader-cell.at_left a:hover {
        color: white;
    }
    .single-route .l-subheader.at_bottom.width_full {
        display: none;
    }
    .l-subheader-sticky-mobile {
        display: block!important;
        position: fixed;
        bottom: 0;
        width: 100%;
        background-color: var(--color-primary)!important;
        /* animation */
        -webkit-animation: slideup 1s 1;
        -moz-animation: slideup 1s 1;
        -o-animation: slideup 1s 1;
        animation: slideup 1s 1
    }
    .l-subheader.at_bottom.width_full {
        /* //transition */
        -webkit-transition: height 1s;
        -moz-transition: height 1s;
        -o-transition: height 1s;
        transition: height 1s;
    }
    
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone {
        background: var(--color-secondary);
        position: relative;
        width: 100%;
        text-align: center;
        justify-content: center;
        display: flex;
        align-items: center;
        height: 100%;
        left: 16px;
    }
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone a{
        padding: 18px 5px;
    }
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone:after,
    .l-subheader-sticky-mobile .sticky-mobile-menu-phone:before {
        content: "";
        position: absolute;
        width: 35px;
        height: 50%;
        right: 100%;
    }

    .l-subheader-sticky-mobile .sticky-mobile-menu-phone:after {
        bottom: 0;
        background: linear-gradient(to left top, #F18E08 50%, transparent 50%);
    }

    .l-subheader-sticky-mobile .sticky-mobile-menu-phone:before {
        top: 0;
        background: linear-gradient(to left bottom, #F18E08 50%, transparent 50%);
    }
    .l-subheader-sticky-mobile .w-nav-list.level_1.hover_simple {
        bottom: 100%!important;
        background-color: var(--color-primary)!important;
        color: white!important;
        top: auto!important;
        box-shadow: 0 -3px 8px rgba(0,0,0,0.1)!important;
    }
    
}
/* ... */

